# slidetag-pipeline

./: .gitignore  CMakeLists.txt  README.md
configs/: config.yaml  config_test.yaml
envs/: r_env.yml  r_env_ubun.yml  stags-ubun.yml  stags.yml  stags2.yml
src/R/: get_stag_imgs.R  get_stag_imgs2.R  initial.R  test.R
src/cpp/: mapper2.cpp
src/python/: slicer_mrml_gen.py
src/setup/: setup_instance.sh  startup.sh
src/workflow/: .gitignore  Snakefile  format_imgs.py  prep.py  prep.sh  prep_init.py  prep_init.sh  prep_rigid.py  prep_rigid.sh  prep_warp.py  prep_warp.sh  render_plots.py  render_plots.sh  temp.py
templates/: config.yaml  config_osx.yaml  rigid.mrml
templates/rigid/: T.mrk.json  rigid.mrml
templates/warp/: F.mrk.json  warp.mrml
